refactor: Update exception handlers to use ResponseEntity<Object> for compatibility